fixed gray divider spacings

--- a/app/assets/stylesheets/components/_show_track.scss
+++ b/app/assets/stylesheets/components/_show_track.scss
@@ -153,6 +153,7 @@
 
     // for the very bottom, after All Comments (if no comments, can use min height?)
     margin-bottom: 74px;
+    padding-right: 30px;
 }
 
 
@@ -263,7 +264,7 @@
 }
 
 .below-show-track-banner-right-margin {
-    margin: 0 30px;
+    margin-left: 30px;
     // border: 1px solid blue;
 }
 
